SI: Fixes for nav-bar disappearing on mobile

--- a/notes-app/style.css
+++ b/notes-app/style.css
@@ -49,7 +49,7 @@ body {
 .notes .main {
     background-color: #fff;
     overflow: hidden;
-    height: 500px;
+    height: 100%;
     width: 100%;
     padding: 0 1rem;
     overflow-x: hidden;
@@ -65,7 +65,7 @@ body {
     font-size: 1.2rem;
     outline: none;
     width: 100%;
-    height: 500px;
+    height: 100%;
     font-family: inherit;
     border: none;
     padding: 1rem 1.5rem;
